--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,8 @@
   --gradient-topo: linear-gradient(to right, hsl(264, 100%, 61%), hsl(293, 100%, 63%));
   --gradient-chat: linear-gradient(to right, hsl(293, 100%, 63%), hsl(264, 100%, 61%));
   --gradient-fundo: linear-gradient(hsl(293, 100%, 63%), hsl(264, 100%, 61%));
+  --fundo-pink: hsl(276, 100%, 81%, 5%);
+  --sombra-cellphone: hsl(270, 7%, 64%, 20%);
   --rubik: 'Rubik', sans-serif;
 }
 
@@ -31,8 +33,9 @@ body {
 .background {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   justify-content: space-between;
-  align-items: baseline;
+  z-index: -2;
 }
 
 .background__gradient {
@@ -40,19 +43,99 @@ body {
   height: 60vh;
   width: 50%;
   border-radius: 0 0 calc(50vh - 0%) 0;
-  z-index: -1;
-  position: absolute;
   align-self: flex-start;
+  display: inline-block;
 }
 
 .background__pink {
-  background-image: var(--gradient-fundo);
+  background-color: var(--fundo-pink);
   height: 60vh;
   width: 50%;
   border-radius: calc(50vh - 0%) 0 0 0;
-  z-index: -1;
-  position: absolute;
+  display: inline-block;
   align-self: flex-end;
+}
+
+.cellphone {
+  margin: 4rem auto 0;
+  align-self: center;
+  width: 250px;
+  height: 510px;
+  background-color: var(--white);
+  border-radius: 30px;
+  z-index: 2;
+  position: absolute;
+  box-shadow: 10px 10px 30px var(--sombra-cellphone);
+}
+
+.cellphone__inside {
+  background-color: var(--light-grayish-violet);
+  border-radius: 20px;
+  margin: 0.65rem;
+  height: calc(510px - 1.3rem);
+  display: flex;
+  font-size: 0.55rem;
+  line-height: 0.75rem;
+}
+
+.cellphone__topo {
+  background-image: var(--gradient-topo);
+  border-radius: 20px 20px 5px 5px;
+  position: absolute;
+  height: 3rem;
+  width: 87.5%;
+  padding: 15px 5px 5px 5px;
+  box-shadow: 10px 10px 30px var(--sombra-cellphone);
+  color: var(--pale-violet);
+}
+
+.cellphone__user {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+}
+
+.cellphone__user--back {
+  grid-column: 1;
+  grid-row: 1 / span 2;
+  background-image: url(../icon/5401626871647100443.svg);
+}
+
+.cellphone__user--pic {
+  background-image: url(../img/avatar.jpg);
+  border-radius: 100%;
+  border: 1px solid var(--white);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 25px;
+  width: 25px;
+  grid-column: 2;
+  grid-row: 1 / span 2;
+  align-content: center;
+}
+
+.cellphone__user--name {
+  grid-column: 3;
+  grid-row: 1;
+  font-size: 0.7rem;
+  font-weight: 500;
+  color: var(--white);
+}
+
+.cellphone__user--status {
+  grid-column: 3;
+  grid-row: 2;
+}
+
+.cellphone__user--dots {
+  grid-column: 3;
+  grid-row: 2;
+}
+
+.footer {
+  position: absolute;
+  z-index: 3;
+  margin-top: 580px;
 }
 
 .title {
@@ -60,10 +143,13 @@ body {
   color: var(--very-dark-desaturated-violet);
   font-weight: 500;
   margin: 3rem auto 1.5rem;
+  z-index: 3;
+  text-align: center;
 }
 
 .paragraph {
   text-align: center;
   margin: 0 2rem;
   line-height: 1.75rem;
+  z-index: 3;
 }
