--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -273,19 +273,25 @@ body {
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: normal;
-  font-size: 16px;
+  font-size: 19px;
   color: var(--white);
   background-color: var(--very-dark-desaturated-violet);
   border-radius: 100%;
-  display: inline-block;
-  height: 30px;
-  width: 30px;
+  height: 27px;
+  width: 27px;
   text-transform: none;
   letter-spacing: normal;
   word-wrap: normal;
   white-space: nowrap;
   direction: ltr;
-  margin-right: 8px;
+  margin-right: 4px;
+  text-align: center;
+  align-self: center;
+  display: flex;
+  justify-content: space-around;
+}
+
+.cellphone__type--icon {
   text-align: center;
   align-self: center;
 }
@@ -307,7 +313,7 @@ body {
 
 .paragraph {
   text-align: center;
-  margin: 0 2rem;
+  margin: 0 2rem 2rem;
   line-height: 1.75rem;
   z-index: 3;
 }
