--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -346,3 +346,20 @@ body {
     align-self: flex-end;
   }
 }
+
+.cellphone {
+  margin: auto 4rem 25%;
+  align-self: flex-start;
+  width: 250px;
+  height: 510px;
+  background-color: var(--white);
+  border-radius: 30px;
+  z-index: 2;
+  position: absolute;
+  box-shadow: 10px 10px 30px var(--sombra-cellphone);
+}
+
+.footer {
+  z-index: 3;
+  align-self: flex-end;
+}
